[package]
name = "lightr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
bytemuck = "1.13"
logind-zbus = "3.1"
zbus = "3.14"

[profile.release]
strip = true
